$Id$

2009-05-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* autoconf.ac: Updated to autoconf 2.61

2009-03-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Added macros to detect compiler support for
	  -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security.

	* configure.ac: Conditionally enable compiler flags for
	  -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security using
	  the new acinclude.m4 autoconf macros.

	* configure.ac: Incremented version to 1.7.2.

2008-08-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint get-iab get-oui: Replaced "#!/usr/bin/perl" shebang
	  with "#!/usr/bin/env perl" to increase portability.  This allows
	  these perl scripts to work on systems where perl is not installed in
	  /usr/bin, such as NetBSD.

2008-07-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version to 1.7.1.

	* arp-fingerprint: Added NetBSD 4.0, FreeBSD 7.0 and Vista SP1

2008-07-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released arp-scan version 1.7.
	  tarball arp-scan-1.7.tar.gz, size 344,771 bytes
	  md5sum a9927dba2b1dbdfd1c3b3bb09615fc14

2008-07-24 Roy Hills <Roy.Hills@nta-monitor.com>

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

	* configure.ac: Incremented version to 1.7.

2008-07-11 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.a: Removed reference to RMIF environment variable.
	  arp-scan now uses the value specified with --interface, or
	  if that is not specified, picks an interface with
	  pcap_lookupdev().

	* configure.ac: Incremented version to 1.6.4 for pre-release
	  testing.

	* *.c, *.h: Modified copyright statements to read 2005-2008.

2008-05-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Added --pcapsavefile (-W) option to allow received
	  ARP responses to be saved in the specified pcap savefile for
	  later analysis.

	* TODO: Removed plan to support libpcap 0.7 as just about every